--- a/src/assets/styles/recommendReset.css
+++ b/src/assets/styles/recommendReset.css
@@ -1,38 +1,28 @@
+/* 폰트 ------------------------------------------------------- */
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css);
+
 /* ======== 기본 리셋 ======== */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Spoqa Han Sans Neo', 'Spoqa Han Sans JP', sans-serif;
 }
-
-/* 폰트 ------------------------------------------------------- */
-/* @font-face {
-    font-family: "Pretendard";
-    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
-@font-face {
-    font-family: "Pretendard";
-    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff") format("woff");
-    font-weight: 700;
-    font-style: bold;
-    font-display: swap;
-} */
 
 :root {
-  /* 라이트 모드 (기본) */
   --background-color: #ffffff;
-  --text-color: #333333;
-  --accent-color: #0066cc;
-}
-
-[data-theme='dark'] {
-  /* 다크 모드 */
-  --background-color: #222222;
-  --text-color: #f0f0f0;
-  --accent-color: #4d9fff;
+  --text-color: #000000;
+  --button-color: #21bf48;
+  --disabled-color: #c4c4c4;
+  --whitebutton-text-color: #767676;
+  --button-darkcolor: #767676;
+  --component-background-color: #767676;
+  --button-text-color: #ffffff;
+  --button-taphover-color: #effff3;
+  --input-error-color: red;
+  --input-success-color: #21bf48;
+  --tab-title-color: #f2f2f2;
 }
 
 html {
@@ -40,7 +30,6 @@ html {
 }
 
 body {
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
   line-height: 1.5;
   color: #333;
   font-size: 1.6rem;
