체크박스 css 연결, 색상 변경

--- a/src/component/etc/checkbox.css
+++ b/src/component/etc/checkbox.css
@@ -49,7 +49,7 @@ etc-checkbox {
 }
 
 .check-box input[type="checkbox"]:checked + label {
-  background: #21BF48;
+  background: #FFFFFF;
   border-color: #21BF48;
 }
 
@@ -60,7 +60,7 @@ etc-checkbox {
   top: 1px;
   width: 5px;
   height: 9px;
-  border: solid white;
+  border: solid #21BF48;
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
