--- a/src/component/etc/mypage.css
+++ b/src/component/etc/mypage.css
@@ -33,8 +33,7 @@
   
   /* 텍스트 스타일 */
   color: #767676;
-  font-size: 16px;
-  font-family: 'Spoqa Han Sans Neo', sans-serif;
+  font-size: 1.6rem;
   font-weight: 500;
   text-align: center;
   
@@ -81,8 +80,7 @@
   
   /* 텍스트 스타일 */
   color: #767676;
-  font-size: 16px;
-  font-family: 'Spoqa Han Sans Neo', sans-serif;
+  font-size: 1.6rem;
   font-weight: 500;
   text-align: center;
   
