--- a/src/component/button/button.css
+++ b/src/component/button/button.css
@@ -8,8 +8,7 @@
 
   /* 텍스트 스타일 */
   color: #ffffff;
-  font-size: 24px;
-  font-family: 'Spoqa Han Sans Neo', sans-serif;
+  font-size: 2.4rem;
   font-weight: 700;
   text-align: center;
 
@@ -68,8 +67,7 @@
 
   /* 텍스트 스타일 */
   color: #ffffff;
-  font-size: 18px;
-  font-family: 'Spoqa Han Sans Neo', sans-serif;
+  font-size: 1.8rem;
   font-weight: 700;
   line-height: 22px;
   text-align: center;
@@ -199,8 +197,7 @@
 
 .ms-icon-button__text {
   color: #ffffff;
-  font-size: 18px;
-  font-family: 'Spoqa Han Sans Neo', sans-serif;
+  font-size: 1.8rem;
   font-weight: 500;
   display: flex;
   justify-content: center;
@@ -242,8 +239,7 @@
 
   /* 텍스트 스타일 */
   color: #ffffff;
-  font-size: 16px;
-  font-family: 'Spoqa Han Sans Neo', sans-serif;
+  font-size: 1.6rem;
   font-weight: 500;
   text-align: center;
 
@@ -328,8 +324,7 @@
 
   /* 텍스트 스타일 */
   color: #ffffff;
-  font-size: 16px;
-  font-family: 'Spoqa Han Sans Neo', sans-serif;
+  font-size: 1.6rem;
   font-weight: 500;
   text-align: center;
 
