--- a/src/component/logo/styles.css
+++ b/src/component/logo/styles.css
@@ -2,10 +2,18 @@ a {
   display: block;
 }
 .logo-box {
-  width: 300px;
+  display: inline-block;
 }
+
+.logo {
+  display: block;
+  line-height: 0;
+}
+
 .logo img {
   width: 100%;
+  height: auto;
+  display: block;
 }
 .shop {
   width: 32px;
@@ -93,4 +101,44 @@ a {
   width: 50px;
   height: 50px;
   background: url(./src/assets/images/icon-img.png) no-repeat center top / 100%;
+}
+/* styles.css */
+
+/* 체크박스 래퍼 */
+.checkbox-wrapper {
+  display: inline-flex;
+  align-items: center;
+}
+
+/* 기본 체크박스 숨기기 */
+.hidden-checkbox {
+  display: none;
+}
+
+/* 라벨 스타일 */
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+}
+
+.checkbox-img {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+  display: inline-block;
+  vertical-align: middle;
+  transition: all 0.2s ease;
+}
+
+.label-text {
+  font-size: 14px;
+  color: #333;
+  line-height: 1.5;
+}
+
+.hidden-checkbox:focus + .checkbox-label .checkbox-img {
+  outline: 2px solid #4caf50;
+  outline-offset: 2px;
 }
