--- a/src/component/logo/styles.css
+++ b/src/component/logo/styles.css
@@ -1,159 +1,120 @@
 a {
   display: block;
 }
-
-.logo-link {
-  display: inline-block;
-  text-decoration: none;
-  line-height: 0;
+.logo-box {
+  width: 300px;
+}
+.logo img {
+  width: 100%;
 }
 
-.logo-img {
-  display: block;
-  /* 기본 크기는 원본 이미지 크기를 따름 */
-  max-width: 100%;
-  height: auto;
-}
-
+/* ========================================
+   장바구니 & 로그인 아이콘
+   ======================================== */
 .shop {
   width: 32px;
   height: 32px;
-  background: url(./src/assets/images/icon-shopping-cart.png) no-repeat center
-    top / 100%;
+  background: url('/src/assets/images/icon-shopping-cart.png') no-repeat center center / contain;
+  display: block;
 }
+
 .shop-gr {
   width: 32px;
   height: 32px;
-  background: url(./src/assets/images/icon-shopping-cart-2.png) no-repeat center
-    top / 100%;
+  background: url('/src/assets/images/icon-shopping-cart-2.png') no-repeat center center / contain;
+  display: block;
 }
+
 .user {
   width: 32px;
   height: 32px;
-  background: url(./src/assets/images/icon-user.png) no-repeat center top / 100%;
+  background: url('/src/assets/images/icon-user.png') no-repeat center center / contain;
+  display: block;
 }
+
 .user-gr {
   width: 32px;
   height: 32px;
-  background: url(./src/assets/images/icon-user-2.png) no-repeat center top /
-    100%;
+  background: url('/src/assets/images/icon-user-2.png') no-repeat center center / contain;
+  display: block;
 }
+
+/* ========================================
+   기타 아이콘
+   ======================================== */
 .bag {
   width: 32px;
   height: 32px;
-  background: url(./src/assets/images/icon-shopping-bag.png) no-repeat center
-    top / 100%;
+  background: url('/src/assets/images/icon-shopping-bag.png') no-repeat center center / contain;
+  display: block;
 }
+
 .plus {
   width: 32px;
   height: 32px;
-  background: url(./src/assets/images/icon-plus.png) no-repeat center top / 100%;
+  background: url('/src/assets/images/icon-plus.png') no-repeat center center / contain;
+  display: block;
 }
+
 .down-arrow {
   width: 22px;
   height: 22px;
-  background: url(./src/assets/images/icon-down-arrow.png) no-repeat center
-    top / 100%;
+  background: url('/src/assets/images/icon-down-arrow.png') no-repeat center center / contain;
+  display: block;
 }
+
 .right-arrow {
   width: 22px;
   height: 22px;
-  background: url(./src/assets/images/icon-rhigt-arrow.png) no-repeat center
-    top / 100%;
+  background: url('/src/assets/images/icon-rhigt-arrow.png') no-repeat center center / contain;
+  display: block;
 }
+
 .up-arrow {
   width: 22px;
   height: 22px;
-  background: url(./src/assets/images/icon-up-arrow.png) no-repeat center top /
-    100%;
+  background: url('/src/assets/images/icon-up-arrow.png') no-repeat center center / contain;
+  display: block;
 }
+
 .minus {
   width: 20px;
   height: 20px;
-  background: url(./src/assets/images/icon-minus-line.png) no-repeat center
-    top / 100%;
+  background: url('/src/assets/images/icon-minus-line.png') no-repeat center center / contain;
+  display: block;
 }
+
 .plus-icon {
   width: 20px;
   height: 20px;
-  background: url(./src/assets/images/icon-plus-line.png) no-repeat center top /
-    100%;
+  background: url('/src/assets/images/icon-plus-line.png') no-repeat center center / contain;
+  display: block;
 }
+
 .delect {
   width: 22px;
   height: 22px;
-  background: url(./src/assets/images/icon-delete.png) no-repeat center top /
-    100%;
+  background: url('/src/assets/images/icon-delete.png') no-repeat center center / contain;
+  display: block;
 }
+
 .swiper-l {
   width: 60px;
   height: 124px;
-  background: url(./src/assets/images/icon-swiper-1.png) no-repeat center top /
-    100%;
+  background: url('/src/assets/images/icon-swiper-1.png') no-repeat center center / contain;
+  display: block;
 }
+
 .swiper-r {
   width: 60px;
   height: 124px;
-  background: url(./src/assets/images/icon-swiper-2.png) no-repeat center top /
-    100%;
+  background: url('/src/assets/images/icon-swiper-2.png') no-repeat center center / contain;
+  display: block;
 }
+
 .img-icon {
   width: 50px;
   height: 50px;
-  background: url(./src/assets/images/icon-img.png) no-repeat center top / 100%;
-}
-/* styles.css */
-
-/* 체크박스 래퍼 */
-.checkbox-wrapper {
-  display: inline-flex;
-  align-items: center;
-}
-
-/* 기본 체크박스 숨기기 */
-.hidden-checkbox {
-  display: none;
-}
-
-/* 라벨 스타일 */
-.checkbox-label {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  user-select: none;
-}
-
-.checkbox-img {
-  width: 24px;
-  height: 24px;
-  margin-right: 8px;
-  display: inline-block;
-  vertical-align: middle;
-  transition: all 0.2s ease;
-}
-
-.label-text {
-  font-size: 14px;
-  color: #333;
-  line-height: 1.5;
-}
-
-.hidden-checkbox:focus + .checkbox-label .checkbox-img {
-  outline: 2px solid #4caf50;
-  outline-offset: 2px;
-}
-.radio-off {
+  background: url('/src/assets/images/icon-img.png') no-repeat center center / contain;
   display: block;
-  width: 28px;
-  height: 28px;
-  background: url(../../assets/images/icon-check-off.png) no-repeat center top /
-    100%;
-}
-
-.radio-on {
-  display: block;
-  width: 28px;
-  height: 28px;
-  background: url(../../assets/images/icon-check-on.png) no-repeat center top /
-    100%;
 }
