feat: 장바구니 페이지 레이아웃 및 스타일 개선, 임시 데이터 추가

--- a/src/component/shoppingcart/cart.css
+++ b/src/component/shoppingcart/cart.css
@@ -19,6 +19,10 @@
   padding: 18px 30px;
   text-align: center;
   font-size: 1.8rem;
+  width: 100%;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cart-col-check {
