--- a/src/component/sellercart/styles.css
+++ b/src/component/sellercart/styles.css
@@ -8,6 +8,7 @@
 .header-text {
   display: grid;
   grid-template-columns: 2fr 1fr 0.5fr 0.5fr;
+  background-color: var(--background-color);
   gap: 20px;
   height: 60px;
   align-items: center;
@@ -30,6 +31,7 @@
   gap: 20px;
   align-items: center;
   padding: 20px 0;
+  background-color: var(--background-color);
   border-bottom: 1px solid var(--disabled-color);
 }
 
